Release: versão 1.0
